feat: add paginiation to movies endpoint
